--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/typer
+spring.datasource.username=postgres
+spring.datasource.password=Balony1#
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+#server.error.include-stacktrace=never
+server.error.include-stacktrace=never
+spring.jackson.deserialization.fail-on-unknown-properties=true
 
