--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "prepare": "husky install"
+    "prepare": "cd ../ && husky install ./frontend/.husky"
   },
   "private": true,
   "dependencies": {
@@ -36,6 +36,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "lint-staged": "^14.0.1",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
     "typescript": "~5.1.3"
