--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "prepare": "cd ../ && husky install ./frontend/.husky"
+    "prepare": "cd ../ && husky install ./frontend/.husky",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -38,6 +39,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "lint-staged": "^14.0.1",
     "postcss": "^8.4.29",
+    "prettier": "^3.0.3",
     "tailwindcss": "^3.3.3",
     "typescript": "~5.1.3"
   }
