--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -73,11 +73,12 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/jest:run",
           "options": {
             "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
-            "inlineStyleLanguage": "scss",
+            "globalMocks": ["getComputedStyle", "doctype", "styleTransform", "matchMedia"],
+            "inlineStyleLanguage": ["scss"],
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": ["src/styles.scss"],
             "scripts": []
