--- a/frontend/.lintstagedrc
+++ b/frontend/.lintstagedrc
@@ -1,3 +1,3 @@
 {
-  "*.{js,ts,tsx,scss,css,md}": ["prettier . --write", "eslint"]
+    "*.{js,ts,tsx,scss,css,md}": ["prettier . --write", "eslint", "ng test"]
 }
