Add Jest in favor of Karma

--- a/frontend/.lintstagedrc
+++ b/frontend/.lintstagedrc
@@ -1,3 +1,4 @@
 {
-    "*.{js,ts,tsx,scss,css,md}": ["prettier . --write", "eslint", "ng test"]
+    "*.{js,ts,tsx,scss,css,md}": ["prettier . --write"],
+    "*.ts": ["eslint"]
 }
