--- a/web/.lintstagedrc
+++ b/web/.lintstagedrc
@@ -1,4 +1,4 @@
 {
     "*.{js,ts,tsx,scss,css,md}": ["prettier . --write"],
-    "*.ts": ["eslint"]
+    "*.ts": ["eslint", "ng test --find-related-tests"]
 }
