--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,8 @@
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
-        "prepare": "cd ../ && husky install ./frontend/.husky",
+        "test-related-tests": "ng test --find-related-tests",
+        "prepare": "cd ../ && husky install ./web/.husky",
         "lint": "ng lint"
     },
     "private": true,
