--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-#server.error.include-stacktrace=never
 server.error.include-stacktrace=never
 spring.jackson.deserialization.fail-on-unknown-properties=true
-
+spring.batch.jdbc.initialize-schema=always
+spring.batch.job.enabled=false
