Fixed issue with error messages.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ server.error.include-stacktrace=never
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.batch.jdbc.initialize-schema=always
 spring.batch.job.enabled=false
+server.error.include-message=always
