Added Refresh Token functionality.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.batch.jdbc.initialize-schema=always
 spring.batch.job.enabled=false
 server.error.include-message=always
+typer.app.jwtExpirationSec= 1800
+typer.app.jwtRefreshExpirationSec= 86400
