Added integration with swagger.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.batch.job.enabled=false
 server.error.include-message=always
 typer.app.jwtExpirationSec= 1800
 typer.app.jwtRefreshExpirationSec= 86400
+typer.openapi.dev-url=http://localhost:8080
+springdoc.swagger-ui.disable-swagger-default-url=true
+# swagger-ui custom path
+springdoc.swagger-ui.path=/typer-documentation
+springdoc.enable-spring-security=true
