--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ typer.openapi.dev-url=http://localhost:8080
 springdoc.swagger-ui.disable-swagger-default-url=true
 # swagger-ui custom path
 springdoc.swagger-ui.path=/typer-documentation
-springdoc.enable-spring-security=true
+springdoc.swagger-ui.supportedSubmitMethods=Array=[]
