--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-spring.datasource.url=jdbc:postgresql://${DB_ADDRESS}:5432/typer_prototype
-spring.datasource.username=${POSTGRES_USERNAME}
-spring.datasource.password=${POSTGRES_PASSWORD}
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-server.error.include-stacktrace=never
-spring.jackson.deserialization.fail-on-unknown-properties=true
-spring.batch.jdbc.initialize-schema=always
-spring.batch.job.enabled=false
+#spring.datasource.url=jdbc:postgresql://${DB_ADDRESS}:5432/typer_prototype
+#spring.datasource.username=${POSTGRES_USERNAME}
+#spring.datasource.password=${POSTGRES_PASSWORD}
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.format_sql=true
+#server.error.include-stacktrace=never
+#spring.jackson.deserialization.fail-on-unknown-properties=true
+#spring.batch.jdbc.initialize-schema=always
+#spring.batch.job.enabled=false
 typer.app.jwtExpirationSec= 1800
 typer.app.jwtRefreshExpirationSec= 86400
 typer.openapi.dev-url=http://localhost:8080
@@ -16,3 +16,4 @@ springdoc.swagger-ui.disable-swagger-default-url=true
 # swagger-ui custom path
 springdoc.swagger-ui.path=/typer-documentation
 springdoc.swagger-ui.supportedSubmitMethods=Array=[]
+springdoc.swagger-ui.defaultModelsExpandDepth=-1
