--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,16 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-server.error.include-stacktrace=never
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.batch.jdbc.initialize-schema=always
 spring.batch.job.enabled=false
+server.error.include-stacktrace=never
+spring.mvc.log-resolved-exception=true
+
 typer.app.jwtExpirationSec= 1800
 typer.app.jwtRefreshExpirationSec= 86400
 typer.openapi.dev-url=http://localhost:8080
+
 springdoc.swagger-ui.disable-swagger-default-url=true
 # swagger-ui custom path
 springdoc.swagger-ui.path=/typer-documentation
