--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ server.error.include-stacktrace=never
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.batch.jdbc.initialize-schema=always
 spring.batch.job.enabled=false
+spring.mvc.log-resolved-exception=true
 typer.app.jwtExpirationSec= 1800
 typer.app.jwtRefreshExpirationSec= 86400
 typer.openapi.dev-url=http://localhost:8080
