--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -6,5 +6,6 @@ RUN npm install
 RUN npm run build
 
 FROM nginx:latest
+COPY /nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 4200
 COPY --from=builder /app/dist/typer /usr/share/nginx/html
