--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -17,7 +17,7 @@ server {
   index index.html;
 
   location /typer {
-   proxy_pass http://typer-backend:8080/;
+   proxy_pass http://typer-backend:8080/typer;
 
    proxy_http_version 1.1;
                 proxy_set_header Upgrade $http_upgrade;
@@ -26,6 +26,4 @@ server {
                 proxy_cache_bypass $http_upgrade;
 
   }
-
-  
 }
