Added environment variable to use in swagger url.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.mvc.log-resolved-exception=true
 
 typer.app.jwtExpirationSec= 1800
 typer.app.jwtRefreshExpirationSec= 86400
-typer.openapi.dev-url=http://localhost:8080
+typer.openapi.dev-url=http://${BACKEND_ADDRESS}:8080
 
 springdoc.swagger-ui.disable-swagger-default-url=true
 # swagger-ui custom path
