--- a/kubernetes/web-service.yaml
+++ b/kubernetes/web-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: web-service
 spec:
   selector:
-    app: frontend
+    app: typer-web
   type: LoadBalancer
   ports:
     - protocol: TCP
