--- a/web/default.conf.template
+++ b/web/default.conf.template
@@ -17,7 +17,7 @@ server {
   index index.html;
 
   location /typer {
-   proxy_pass http://typer-backend:8080/typer;
+   proxy_pass http://${BACKEND_ADDRESS}:8080/typer;
 
    proxy_http_version 1.1;
                 proxy_set_header Upgrade $http_upgrade;
