--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -5,6 +5,7 @@ RUN npm install
 RUN npm run build
 
 FROM nginx:latest
+ENV BACKEND_ADDRESS=typer-backend
 RUN mkdir /etc/nginx/templates
 COPY default.conf.template /etc/nginx/templates
 EXPOSE 4200
