Added environment variables for backend and web charts.

--- a/typer-web-charts/templates/web-deployment.yaml
+++ b/typer-web-charts/templates/web-deployment.yaml
@@ -16,3 +16,6 @@ spec:
       containers:
         - name: typer-web
           image: "{{ .Values.image.name }}:{{ .Values.image.tag }}"
+          env:
+            - name: BACKEND_ADDRESS
+              value: "{{ .Values.env.value.BACKEND_ADDRESS }}.{{ .Values.namespace }}"
