--- a/typer-backend-charts/templates/backend-deployment.yaml
+++ b/typer-backend-charts/templates/backend-deployment.yaml
@@ -18,7 +18,7 @@ spec:
           image: "{{ .Values.image.name }}:{{ .Values.image.tag }}"
           env:
             - name: DB_ADDRESS
-              value: {{ .Values.env.value.DB_ADDRESS }}
+              value: "{{ .Values.env.value.DB_ADDRESS }}.{{ .Values.namespace }}"
           envFrom:
             - secretRef:
                 name: {{ .Values.secretRef.name }}
